--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               </div>
             </div>
             <div class="card" id="custom-card">
-              <img class="card-img-top" src="./Gallery/market_pic04.JPG" alt="Card image cap">
+              <img class="card-img-top" src="./Gallery/market_pic20.JPG" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">大自然音樂會:音樂饗宴</h5>
                 <p class="card-text mb-3 mt-3">你將享受到大自然音樂會的精彩表演。音樂家們將以大自然為靈感，演奏悅耳的音樂!</p>
@@ -397,7 +397,7 @@
               </div>
             </div>
             <div class="card" id="custom-card">
-              <img class="card-img-top" src="./Gallery/market_pic04.JPG" alt="Card image cap">
+              <img class="card-img-top" src="./Gallery/market_pic05.JPG" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">街頭藝術表演:藝術盛會</h5>
                 <p class="card-text mb-3 mt-3">街頭藝術家們將在我們的舞台上進行現場表演，包括塗鴉、街舞和音樂演出。</p>
@@ -407,7 +407,7 @@
               </div>
             </div>
             <div class="card" id="custom-card">
-              <img class="card-img-top" src="./Gallery/market_pic04.JPG" alt="Card image cap">
+              <img class="card-img-top" src="./Gallery/market_pic02.JPG" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">多元文化探索:跨界新境</h5>
                 <p class="card-text mb-3 mt-3">我們將為您呈現多國文化的舞蹈和音樂表演，展示不同國家的藝術風格。</p>
@@ -596,7 +596,7 @@
           </div>
         </div>
       </div>
-      <div class="declare"><p>ㄏ</p></div>
+      <div class="declare"><p>© Copyright 寶島慢波市集 2024</p></div>
     </footer>
     <div id="chat-icon">
       <i class="fas fa-headset fa-3x" style="color: #404040"></i>
